# sneedov

./: Cargo.toml  LICENSE  README.md
src/: database.rs  lib.rs  main.rs  markov.rs  split.rs  telegram.rs
src/markov/: macros.rs  split.rs
src/telegram/: chat.rs  config.rs
src/telegram/config/: defaults.rs
