[package]
name = "sneedov"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sqlite = "0.31.1"
indicatif = "0.17.6"
itertools = "0.11.0"
teloxide = "0.12.2"
teloxide-macros = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.73"
toml = { version = "0.8.0", features = ["display", "parse"] }
serde = "1.0.188"
